--- a/src/web/tree.css
+++ b/src/web/tree.css
@@ -1,3 +1,7 @@
+.Nzbiranik_tree_view .Nzbiranik_buttons {
+    padding: 5px 0;
+}
+
 .Nzbiranik_tree_view .Nzbiranik_tree_children{
     padding-left: 20px;
 }
