--- a/src/web/tree.css
+++ b/src/web/tree.css
@@ -20,6 +20,7 @@
     padding: 0 5px;
     position: absolute;
     top: 50%;
+    right: 0;
     transform: translateY(-50%);
     cursor: pointer;
 }
