--- a/src/web/tree.css
+++ b/src/web/tree.css
@@ -12,7 +12,6 @@
 
 .Nzbiranik-tree summary{
     position: relative;
-    display: flex;
 }
 
 .Nzbiranik-tree details > summary::after{
@@ -47,4 +46,8 @@
 
 .Nzbiranik-tree .Nzbiranik-tree__button-move-up {
     cursor: pointer;
+}
+
+.Nzbiranik-tree .Nzbiranik-tree_item-title_inline {
+    display: flex;
 }
