--- a/src/web/tree.css
+++ b/src/web/tree.css
@@ -31,6 +31,7 @@
 
 .Nzbiranik-tree .Nzbiranik-tree__add-child {
     padding: 0 3px;
+    content: url("add.svg");
 }
 
 .Nzbiranik-tree .Nzbiranik-tree__draggable-item_dragging {
