--- a/src/web/tree.css
+++ b/src/web/tree.css
@@ -23,6 +23,8 @@
     right: 0;
     transform: translateY(-50%);
     cursor: pointer;
+    width: 24px;
+    height: 24px;
 }
 
 .Nzbiranik-tree details:has(details)[open] > summary::after{
